# skills-demo

./: .gitignore  AGENTS.md  README.md  app.py  index.html  pyproject.toml  requirements.txt  styles.css
.claude/skills/: git-auto-commit.skill
.claude/skills/git-auto-commit/: SKILL.md
.claude/skills/git-auto-commit/scripts/: auto_commit.py
.claude/skills/skill-creator/: SKILL.md  SKILL_zh.md
codex-sdk/: SKILL.md
git-auto-commit/: SKILL.md
web/: script.js
